# Course

./: FRONTEND.md  README.md  age.txt  file.c  list.c  main.cpp  memory.c  server.py  tasks.txt
asio/: server  server.cpp
bank_system/: CMakeLists.txt  bank_account.cpp  bank_account.h  main.cpp  transaction.cpp  transaction.h  user.cpp  user.h
cache/: CMakeLists.txt  main.cpp
calculator/: CMakeLists.txt  calculator.cpp  calculator.h  main.cpp
config/: CMakeLists.txt  config.cpp  config.hpp  log_level.hpp  main.cpp
coroutines/: CMakeLists.txt  main.cpp
diagnosting/: leak  main.cpp  perf.data  perf.data.old  program  slow
fastmath/: CMakeLists.txt  fastmath.cpp
grpc/: CMakeLists.txt  client.cpp  predict.grpc.pb.cc  predict.grpc.pb.h  predict.pb.cc  predict.pb.h  predict.proto  server.cpp
json/: CMakeLists.txt  config.cpp  config.json
logger/: CMakeLists.txt  main.cpp
matrix/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.h
matrix-optimised/: main.cpp  program
ndarray/: main  main.cpp  ndarray.cpp  ndarray.h  ndview.cpp  ndview.h
pybind/: CMakeLists.txt  ndlite.cpp  ndlite.h
raii/: CMakeLists.txt  file_wrapper.cpp  file_wrapper.h  main.cpp
server_calc/: client  client.cpp  server  server.cpp
social_network/: CMakeLists.txt  main.cpp  user.cpp  user.h
string/: CMakeLists.txt  main.cpp  string.cpp  string.h
task_manager/: CMakeLists.txt  main.cpp  task.h  task_manager.cpp  task_manager.h
templates/: CMakeLists.txt  generic_stack.h  main.cpp  smart_vector.h
text_analyser/: CMakeLists.txt  analyzer.cpp  analyzer.h  main.cpp
С/: file.c  (+5 more)
(+16 files in other folders)
